add profile pic

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 <div class="underline intersect" data-animation="slideRight" data-delay="0.3s"></div>
 
                 <div class="self flex row wrap">
-                    <img class="intersect" data-animation="slideRight" src="https://picsum.photos/id/532/300/200"
-                        alt="Picture of Me">
+                    <img class="intersect" data-animation="slideRight" src="./assets/images/Profile.jpg"
+                        alt="Picture of Me" id="profile-pic">
                     <div class="flex bio intersect" data-animation="slideLeft">
                         <div class="section-header">Who am I?</div>
                         <p>Full Stack Developer with a background in Electrical Engineering. Along with this I have a
